syntax = "proto3";

option csharp_namespace = "LogicServer.Proto";

package node;

service NodesConnector {
  rpc AddNewNode (AddNodeRequest) returns (NodeConnectionReply);
  rpc LinkNodes (LinkNodeRequest) returns (NodeConnectionReply);
}
enum NodeType {
  CONST = 0;
  NOT = 1;
  AND = 2;
  OR = 3;
}

message AddNodeRequest {
  string nodeName = 1;
  NodeType nodeType = 2;
  string sessionId = 3;
}
message LinkNodeRequest {
  string sourceNodeName = 1;
  string destinationNodeName = 2;
  string sessionId = 3;
}

message NodeConnectionReply {
  bool success = 1;
  string errorMessage = 2;
}
